
****  Fix interface inside generate, bug998. [Johan Bjork]

****  Fix $signed casts under generates, bug999. [Clifford Wolf]

****  Fix genvar constant propagation, bug1003. [Johan Bjork]

****  Fix parameter constant propagation from package, bug1004. [Johan Bjork]

****  Fix array slicing of non-const indexes, bug1006. [Johan Bjork]



* Verilator 3.878 2015-11-01

**    Add --vpi flag, and fix VPI linkage, bug969. [Arthur Kahlich]

**    Support genvar indexes into arrayed cells, bug517.  [Todd Strader]

**    Support $sformatf, bug977. [Johan Bjork]

***   Support elaboration assertions, bug973. [Johan Bjork]

***   Support $display with non-format arguments, bug467. [Jamey Hicks]

****  Add VerilatedScopeNameMap for introspection, bug966. [Todd Strader]

****  Ignore %l in $display, bug983. [Todd Strader]

****  Fix very long module names, bug937. [Todd Strader]

****  Fix internal error on dotted refs into generates, bug958. [Jie Xu]

****  Fix structure parameter constant propagation, bug968. [Todd Strader]

****  Fix enum constant propagation, bug970. [Todd Strader]

****  Fix mis-optimizing public DPI functions, bug963. [Wei Song]

****  Fix package:scope.scope variable references.

****  Fix $fwrite to constant stderr/stdout, bug961. [Wei Song]

****  Fix struct.enum.name method calls, bug855. [Jonathon Donaldson]

****  Fix dot indexing into arrayed inferfaces, bug978.  [Johan Bjork]

****  Fix crash in commandArgsPlusMatch, bug987. [Jamie Iles]

****  Fix error message on missing interface, bug985. [Todd Strader]


* Verilator 3.876 2015-08-12

***   Add tracing_on, etc to vlt files, bug932. [Frederic Requin]

****  Support extraction of enum bits, bug951. [Jonathon Donaldson]

****  Fix MinGW compiler error, bug927, bug929. [Hans Tichelaar]

****  Fix .c files to be treated as .cpp, bug930. [Jonathon Donaldson]

****  Fix string-to-int space conversion, bug931. [Fabrizio Ferrandi]

****  Fix dpi imports inside generates. [Michael Tresidder]
