@@ -27,6 +27,7 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix array slicing of non-const indexes, bug1006. [Johan Bjork]
 
+****  Fix dotted generated array error, bug1005. [Jeff Bush, Johan Bjork]
 
 
 * Verilator 3.878 2015-11-01
